@@ -31,12 +31,19 @@
 
 namespace WebCore {
 
-void AXObjectCache::detachWrapper(AccessibilityObject*)
+void AXObjectCache::detachWrapper(AccessibilityObject* obj)
 {
+    // On Windows, AccessibilityObjects are created when get_accChildCount is
+    // called, but they are not wrapped until get_accChild is called, so this
+    // object may not have a wrapper.
+    if (AccessibilityObjectWrapper* wrapper = obj->wrapper())
+        wrapper->detach();
 }
 
 void AXObjectCache::attachWrapper(AccessibilityObject*)
 {
+    // On Windows, AccessibilityObjects are wrapped when the accessibility
+    // software requests them via get_accChild.
 }
 
 void AXObjectCache::postNotification(RenderObject*, const String&)
